V1.1.5 Friday, January 25 2013
 +Added ppa script.
 +Updated German Translation fro patch by Christoph Wickert.
 +Fixed bug #79, reverse order doesn't work.
 +Added fifo_cmd, and stop_all, run_all commands.
 +Fixed bug #82, Parcellite sometimes eats about twenty last characters from a an entry in history.
 
V1.1.4 Saturday, January 19 2013
 Changes
 +Fixed Visual deselection bug where parcellite was doing unnecessary updates.
 +Changed appindicator usage. If indicator-appmenu is not strstr found, then use old status icon. 
   +This change should revert icon behaviour back to pre-libappindicator, for WMs that are not Unity.
 +Added History to popup menu when running Unity.
 +Removed Mutex locs for clipboard updates, commented out some debug prints.

V1.1.3 Thursday, January 17 2013
 Changes
 +Fixed persistent history so it is persistent if checked.
 +Changed all single lists to double.
 +Cleaned up prefs subsystem code in add_section.
 +Fixed corner case bug with persistent history moving to normal.
 +Fixed fifo segfault on parcellite fresh install.
 
V1.1.2 Thursday, January 17 2013 
 Changes
 +Added tooltips for Primary,copy, and syncronize options.
 +Fixed lockup bug recently introduced.
 +Fixed status icon showing up with -n in appindicator.
 +Changed Paste All to Copy All to clip.
 
V1.1.1 Wednesday, January 16 2013 
 Changes
 +Added Paste All on history item right-click.
 +Added Edit on history item right-click.
 +Fix Bug 3417225,Alt+c clear invoked when Ctrl+Alt+c is hotkey.
 +Fix Bug 2687052(re-introduced in rc7) that auto-deselects text in apps like LyX and DevHelp. SVN319 
 +Added tooltip for Action/Command column headers.
 +Fixed svnversion.sh so it shows correct svn revision
 +Added automatic paste via xdotool.
 +Added multiple items per line on preferences subsytem.
  
V1.1.0 Wednesday, January 16 2013 
 Changes
 ***This is a major release.***
 +Added patch 3389976 - history menu crash, utf-8
 +Added UTF-8 checks on incomming text streams.